@startuml
package com.finekuo.byshardingsphereproxy.controller {
  class EmployeeController {
    +getEmployeeById(id: Long): Employee
  }
}

package com.finekuo.mybatisflexcore.mapper {
  interface EmployeeMapper {
    +selectOneById(id: Long): Employee
  }
}

package com.finekuo.mybatisflexcore.entity {
  class Employee {
    +id: Long
    +name: String
    +address: String
    +gender: Integer
    +rocId: String
    ' other fields
  }
}

com.finekuo.byshardingsphereproxy.controller.EmployeeController ..> com.finekuo.mybatisflexcore.mapper.EmployeeMapper : uses
com.finekuo.byshardingsphereproxy.controller.EmployeeController ..> com.finekuo.mybatisflexcore.entity.Employee : returns
com.finekuo.mybatisflexcore.mapper.EmployeeMapper ..> com.finekuo.mybatisflexcore.entity.Employee : returns
@enduml
